my-k8s/myapp/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-java
  namespace: demo-app
  labels:
    app: api-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-java
  template:
    metadata:
      labels:
        app: api-java
    spec:
      containers:
        - name: api-java
          image: teja463/docker-java-postgres:env
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-java
  namespace: demo-app
spec:
  selector:
    app: api-java
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
