my-k8s/myapp/ui-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-react-nginx
  namespace: demo-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kubernetes-course.devopsdirective.com`)
      services:
        - kind: Service
          name: client-react-nginx
          port: 80
          scheme: http
